fix build path