@@ -23,17 +23,17 @@ public class AnicheTechnique extends AbstractTechnique {
 		PersistenceMechanism pm = new CSVFile(fileResultado);
 		pm.write("DesignRole;LOC;CC;Efferent;NOP;CLOC;");
 
-		HashMap<String, Long> linhasDeCodigoPorArchitecturalRole = new HashMap<>();
+		HashMap<String, Long> linhasDeCodigoPorArchitecturalRole = new HashMap<String, Long>();
 		obterTotalLinhasCodigoPorArchitecturalRole(classes, linhasDeCodigoPorArchitecturalRole);
 
 		// METHOD THRESHOLDS
-		HashMap<String, HashMap<Integer, BigDecimal>> distribuicaoCodigoPorMetricaLOC = new HashMap<>();
-		HashMap<String, HashMap<Integer, BigDecimal>> distribuicaoCodigoPorMetricaCC = new HashMap<>();
-		HashMap<String, HashMap<Integer, BigDecimal>> distribuicaoCodigoPorMetricaEfferent = new HashMap<>();
+		HashMap<String, HashMap<Integer, BigDecimal>> distribuicaoCodigoPorMetricaLOC = new HashMap<String, HashMap<Integer, BigDecimal>>();
+		HashMap<String, HashMap<Integer, BigDecimal>> distribuicaoCodigoPorMetricaCC = new HashMap<String, HashMap<Integer, BigDecimal>>();
+		HashMap<String, HashMap<Integer, BigDecimal>> distribuicaoCodigoPorMetricaEfferent = new HashMap<String, HashMap<Integer, BigDecimal>>();
 		// CLASS THRESHOLDS
-		HashMap<String, HashMap<Integer, BigDecimal>> distribuicaoCodigoPorMetricaNOP = new HashMap<>();
+		HashMap<String, HashMap<Integer, BigDecimal>> distribuicaoCodigoPorMetricaNOP = new HashMap<String, HashMap<Integer, BigDecimal>>();
 
-		HashMap<String, HashMap<Integer, BigDecimal>> distribuicaoCodigoPorMetricaCLOC = new HashMap<>();
+		HashMap<String, HashMap<Integer, BigDecimal>> distribuicaoCodigoPorMetricaCLOC = new HashMap<String, HashMap<Integer, BigDecimal>>();
 
 		for (ClassMetricResult classe : classes) {
 			String architecturalRole = LimiarMetrica.DESIGN_ROLE_UNDEFINED;
@@ -79,7 +79,7 @@ public class AnicheTechnique extends AbstractTechnique {
 			HashMap<String, Long> linhasDeCodigoPorDesignRole) {
 		long total = 0;
 		if (linhasDeCodigoPorDesignRole == null)
-			linhasDeCodigoPorDesignRole = new HashMap<>();
+			linhasDeCodigoPorDesignRole = new HashMap<String, Long>();
 
 		for (ClassMetricResult classe : classes) {
 			String architecturalRole = LimiarMetrica.DESIGN_ROLE_UNDEFINED;
@@ -90,7 +90,7 @@ public class AnicheTechnique extends AbstractTechnique {
 				total += method.getLinesOfCode();
 				Long somaLocPorDesignRole = linhasDeCodigoPorDesignRole.get(architecturalRole);
 				if (somaLocPorDesignRole == null) {
-					linhasDeCodigoPorDesignRole.put(architecturalRole, new Long(method.getLinesOfCode()));
+					linhasDeCodigoPorDesignRole.put(architecturalRole, Long.valueOf(method.getLinesOfCode()));
 				} else {
 					somaLocPorDesignRole += method.getLinesOfCode();
 					linhasDeCodigoPorDesignRole.put(architecturalRole, somaLocPorDesignRole);
